# jaik

./: LICENSE  README.md  benchmark_results.json  main.py  pyproject.toml
.github/workflows/: publish.yml
archive/: benchmark.py  benchmark_numba.py  benchmark_sincos.py  benchmark_sincos1.py  codegen.py  codegen_debug1.py  codegen_debug2.py  codegen_sincos.py  codegen_sincos_numba.py  ik_ur10e.py  ik_ur10e_sincos_numba.py  subproblems_slow.py  test_numpy_compare_ur10e_model.py  test_ur_family.py
benchmarks/: benchmark.py  benchmark_results_cluster.json  benchmark_results_laptop.json  benchmark_results_sincos_cluster.json  benchmark_results_sincos_laptop.json  benchmark_sincos.py  benchmark_sincos1.py  benchmark_slow.py  plot.ipynb
src/jaik/: __init__.py  temptest.ipynb  temptest.py  test1.py
src/jaik/_jax/: fk.py  ik_3p2i.py  subproblems.py  utils.py
src/jaik/_jax/_generated/: ik_ur10e.py  ik_ur10e_sincos.py  ur10.py  ur10e.py  ur10e_correct.py  ur10e_nonCSE.py  ur10e_wrapped.py  ur12e.py  ur15.py  ur16e.py  ur18.py  ur20.py  ur3.py  ur30.py  ur3e.py  ur5.py  ur5e.py  ur7e.py  ur8long.py
src/jaik/_numba/_generated/: ur10.py  ur10e.py  ur10e_correct.py  ur10e_prealloc.py  ur10e_wrapped.py  ur12e.py  ur15.py  ur16e.py  ur18.py  ur20.py  ur3.py  ur30.py  ur5.py  (+4 more)
src/jaik/_numpy/: convention_conversions.py  fk.py  ik_3p2i.py  subproblems.py  utils.py
src/jaik/_ur10e_compare_model_py/: __init__.py  model_dynamics.py  model_forwardk.py  model_inversek.py  model_params.py  model_step.py  model_utils.py
src/jaik/codegen/: generate.py  generate_old.py  ik_3pi2.py  subproblems.py  sympy_3p2i.py  sympy_3p2i_old.py  sympy_helpers.py  utils.py
src/jaik/kinematics/: UR_params.py  adjustments.py  codegen.py  codegen_debug.py  codegen_my.py  codegen_old_staged_cse.py  codegen_sincos.py  convention_conversions.py  robots.py
tests/: conftest.py  temp.ipynb  test_jax_compare_ur10e_model.py  test_jax_compare_ur_analytic_ik.py  test_jax_numpy_compare_fk.py  test_jax_numpy_compare_ik.py  test_jax_subproblems.py  test_numpy_subproblems.py  test_numpy_ur10e.py  test_numpy_ur_family.py  utils.py
(+1 files in other folders)
