[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaik"
version = "0.0.2"
description = "Coming soon."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Valentin Bhend", email = "bhed@zhaw.ch" }
]
dependencies = [
    "beartype>=0.22.9",
    "jax>=0.6.2",
    "jaxtyping>=0.3.7",
    "linearsubproblemsltns>=1.0.3",
    "numpy>=1.24.4",
]

[project.urls]
Repository = "https://github.com/ValentinBhend/jaik"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
