[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaik"
version = "0.0.2"
description = "Coming soon."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Valentin Bhend", email = "bhed@zhaw.ch" }
]
dependencies = [
    "beartype>=0.22.9",
    "jax>=0.6.2",
    "jaxtyping>=0.3.7",
    "matplotlib>=3.10.8",
    "numpy>=1.24.4",
    "pytest>=9.0.2",
    "sympy>=1.14.0",
]

[project.optional-dependencies]
numba = ["numba>=0.65.0"]

# [tool.uv.extra-build-dependencies]
# ur-ikfast = ["Cython"]

# [tool.uv.sources]
# ur-ikfast = { git = "https://github.com/cambel/ur_ikfast.git" }

[project.urls]
Repository = "https://github.com/ValentinBhend/jaik"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ur-analytic-ik>=0.1.0.post3",
    "ipykernel>=7.2.0",
    # "ur-ikfast",
]
